[FIX] web_cohort: apply sample data opacity to scrollbar
This commit fixes an issue where the eventual horizontal scrollbar in
cohort table would not receive sample data styling when needed. This
would make it far too apparent due to https://github.com/odoo/odoo/pull/148138

OPW-3733829

closes odoo/enterprise#57139

Related: odoo/odoo#154886

--- a/web_cohort/static/src/cohort_controller.scss
+++ b/web_cohort/static/src/cohort_controller.scss
@@ -40,8 +40,6 @@
 }
 
 // ------- Sample mode -------
-.o_cohort_view .o_view_sample_data {
-    .o_data_table {
-        @include o-sample-data-disabled;
-    }
+.o_cohort_view .o_view_sample_data .table-responsive {
+    @include o-sample-data-disabled;
 }
